# rcedit

./: .gitignore  .gitlab-ci.yml  README.md  rcedit.py  readme.md  setup.cfg  setup.py
rcedit/: __init__.py  rcedit.py
src/: __init__.py
