[metadata]
name = rcedit-
version = 0.1
author = Thomas Grill
author_email = gr@grrrr.org
description = Programmatic access to Research Catalogue web interface
long_description = file: readme.md
long_description_content_type = text/markdown
url = https://github.com/pypa/sampleproject
project_urls =
    Bug Tracker = https://github.com/grrrr/rcedit/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
